Add java.xml.bind to a list of accessible modules
Fix compilation errors in java 9 in several new bolt tests